@@ -62,7 +62,7 @@ describe("when userinfo endpoint is not resolvable", function()
   })
   teardown(test_support.stop_server)
   local _, status = test_support.login()
-  it("login aucceeds", function()
+  it("login succeeds", function()
     assert.are.equals(302, status)
   end)
   it("an error has been logged", function()
